--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "nix_education_konstantin",
   "version": "1.0.0",
   "description": "shop",
-  "main": "./js/main.js",
-  "type": "module",
+  "main": "./app/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,5 +15,21 @@
   "bugs": {
     "url": "https://github.com/stdkhai/nix_education_konstantin/issues"
   },
-  "homepage": "https://github.com/stdkhai/nix_education_konstantin#readme"
+  "homepage": "https://github.com/stdkhai/nix_education_konstantin#readme",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.1",
+    "cookie-parser": "^1.4.6",
+    "csvtojson": "^2.0.10",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.7.2",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0"
+  },
+  "engines": {
+    "node": "16.16.x",
+    "npm": "8.11.x"
+  }
 }
